apply plugin: 'com.android.application'

android {
    signingConfigs {
        config {
            storeFile file('../keystore2019.jks')
            storePassword storePassword
            keyAlias 'key0'
            keyPassword keyPassword
        }
    }
    compileSdkVersion 28
    defaultConfig {
        applicationId "blog.globalquality.hikingbasics"
        minSdkVersion 24
        targetSdkVersion 28
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        debug {
            buildConfigField 'String', "YouTubeKey", google_key
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField 'String', "YouTubeKey", google_key
            signingConfig signingConfigs.config
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    def work_version = '2.2.0-rc01'
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation files('libs/YouTubeAndroidPlayerApi.jar')
    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.google.android.material:material:1.1.0-alpha09'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
    implementation 'com.github.bumptech.glide:glide:4.9.0'
    implementation 'com.google.firebase:firebase-core:17.0.1'
    implementation 'com.google.firebase:firebase-database:18.0.1'
    implementation 'com.google.firebase:firebase-auth:18.1.0'
    implementation 'com.google.firebase:firebase-storage:18.1.1'
    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
    testImplementation 'junit:junit:4.13-beta-3'
    androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
    implementation 'androidx.annotation:annotation:1.1.0'
    implementation "androidx.work:work-runtime:$work_version"
    androidTestImplementation "androidx.work:work-testing:$work_version"
}
apply plugin: 'com.google.gms.google-services'
